added general structure for ui

--- a/index.html
+++ b/index.html
@@ -2,9 +2,31 @@
 <html>
     <head>
         <title>Rock, Paper, Scissors</title>
-        <script href="./r-p-s.js"></script>
+        <script type="text/javascript" src=""></script>
     </head>
     <body>
-        Body of this webpage
+        <h1>Rock, Paper Scissors!</h1>
+        
+        <section>
+            <h1>Scores:</h1>
+            <div>
+                <label>
+                    You: <span>0</span>
+                </label>
+            </div>
+            <div>
+                <label>
+                    Computer: <span>0</span>
+                </label>
+            </div>
+        </section>
+        <br>
+        <section>
+            <label>Click one of the choices:</label>
+            <button>Rock</button>
+            <button>Paper</button>
+            <button>Scissors</button>
+        </section>
+        
     </body>
 </html>
