RPS Game round functionality working with button clicks on html page

--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html>
     <head>
         <title>Rock, Paper, Scissors</title>
-        <script type="text/javascript" src=""></script>
+        <script type="text/javascript" src="r-p-s.js" defer></script>
     </head>
-    <body>
+    <body style="background: gray">
         <h1>Rock, Paper Scissors!</h1>
         
         <section>
@@ -23,9 +23,9 @@
         <br>
         <section>
             <label>Click one of the choices:</label>
-            <button>Rock</button>
-            <button>Paper</button>
-            <button>Scissors</button>
+            <button name="rock-btn" value="rock">Rock</button>
+            <button name="paper-btn" value="paper">Paper</button>
+            <button name="scissors-btn" value="scissors">Scissors</button>
         </section>
         
     </body>
