added structure to game-log container | adjusted css styles

--- a/index.html
+++ b/index.html
@@ -18,22 +18,21 @@
         </section>
 
          <!-- Display your choice and the computer's choice-->
-        <section name="game-log">
-            <div>
-                <h2>Player</h2>
-                <ul>
-                    <li>choice</li>
-                </ul>
+        <section class="game-log">
+            <div class="choices-log">
+                <div class="player-log">
+                    <h2>Player</h2>
+                    <label>❔</label>
+                </div>
+                <div class="player-log">
+                    <h2>Computer</h2>
+                    <label>❔</label>
+                </div>
             </div>
-            <div>
-                <h2>Computer</h2>
-                <ul>
-                    <li>choice</li>
-                </ul>
-            </div>
+            <p>game message</p>
         </section>
 
-        
+
         <!--players-->
         <section class="game-container">
             
