organized javascript code for better readability

--- a/index.html
+++ b/index.html
@@ -22,14 +22,14 @@
             <div class="choices-log">
                 <div class="player-log">
                     <h2>Player</h2>
-                    <label>❔</label>
+                    <label name="player-choice">❔</label>
                 </div>
                 <div class="player-log">
                     <h2>Computer</h2>
-                    <label>❔</label>
+                    <label name="player-choice">❔</label>
                 </div>
             </div>
-            <p>game message</p>
+            <p name="game-msg"> </p>
         </section>
 
 
@@ -69,7 +69,7 @@
                         </span>
                     </h1>
                 </div>
-                <ul><!--Makes these buttons non clickable -->
+                <ul><!--Makes these non clickable -->
                     <li>
                         <label name="rock-btn" value="rock">✊</label>
                     </li>
