updated rules text context

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     
         <!--rules section of the page-->
         <section class="rules">
-            <p>The first player to win 5 rounds is the winner</p>
+            <p>The first player to win 3 out of 5 rounds is the winner</p>
         </section>
 
          <!-- Display your choice and the computer's choice-->
