final additions to styles.css | added github on index page

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <title>Rock, Paper, Scissors</title>
         <meta charset="UTF-8">
         <link href="styles.css" rel="stylesheet">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <script type="text/javascript" src="r-p-s.js" defer></script>
     </head>
     <body>
@@ -86,4 +87,20 @@
             </section>
         </main>
     </body>
+
+    <!-- Page Footer-->
+    <footer>
+        <small>
+            Copyright &#169;
+            <script> document.write(new Date().getFullYear())</script>
+            WilberC1219
+        </small>
+        <a 
+            href="https://github.com/WilberC1219"
+            target="_blank">
+            <i class="fa fa-github github-icon"> </i>
+        </a>
+
+    </footer> 
+    </footer>
 </html>
